Refactor MCPToolInputSchemaFactory